# slosky

./: .gitattributes  .gitignore  README.md  jtdh-manuscript-english.docx  pyproject.toml  requirements-annotation.txt
docs/: README.md  START-HERE.md  automatic-annotation.md  key-findings.md  methodology-section-draft.md  paper-outline.md  quality-assurance.md
docs/archive/: annotation-guidelines.md  atproto-collection-runbook.md  current-status.md  data-source-memo.md  jtdh-submission-checklist.md  methodology-decision.md  process-log.md  provisional-abstract-opening.md  reliable-corpus-strategy.md
docs/paper/: README.md  detector-choice.md  quality-assurance.md  validation-results.md
outputs/: README.md
outputs/analysis/: paper_community.json  paper_linguistic.json
paper/: .latexmkrc  README.md  jtdh-manuscript-english-anonymous.tex  jtdh-manuscript-english.tex  jtdh-template-english.tex  jtdh-template-slovene.tex  jtdh.sty  references.bib
scripts/: analyze_community_formation.py  analyze_for_paper.py  analyze_interactional_structure.py  analyze_topics_domains.py  analyze_validation_samples.py  annotate_release_corpus.py  anonymize_corpus.py  audit_final_corpus.py  backfill_atproto_posts.py  backfill_seed_authors.py  build_final_sl_corpus.py  build_seed_author_list.py  export_strict_sl_corpus.py  live_collect_atproto_posts.py  live_collect_seed_authors.py  merge_corpus_jsonl.py  plot_figure1.py  sample_false_negative_candidates.py
tests/: test_did_resolver.py  test_normalize.py  test_seed_authors.py  test_sqlite_store.py
tools/: annotate_samples.html
(+70 files in other folders)
