[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slosky"
version = "0.1.0"
description = "Corpus workflow for a Slovene Bluesky student paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "atproto>=0.0.62",
  "fasttext>=0.9.3",
  "langdetect>=1.0.9",
  "langid>=1.1.6",
  "lingua-language-detector>=2.1.1",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "scipy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
